--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp": "^3.9.1",
     "gulp-gettext": "^0.3.0",
     "gulp-sort": "^2.0.0",
-    "gulp-wp-pot": "^2.3.2"
+    "gulp-wp-pot": "^2.3.2",
+    "lodash": "^4.17.11"
   }
 }
